Authentication bound to repository
