# routes/routes.go
@@ -2,7 +2,6 @@ package routes
 
 import (
 	"lucamienert/twitter-clone/controllers"
-	"lucamienert/twitter-clone/middleware"
 	"time"
 
 	_ "lucamienert/twitter-clone/docs"
@@ -14,26 +13,21 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-func SetupRouter() *gin.Engine {
-	r := gin.Default()
-
-	// Auth routes
-	r.POST("/register", controllers.Register)
-	r.POST("/login", controllers.Login)
-
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-
-	// Protected Routes
-	auth := r.Group("/")
-	auth.Use(middleware.AuthMiddleware())
+func SetupUserRoutes(router *gin.Engine, userController *controllers.UserController) {
+	userRoutes := router.Group("/users")
 	{
-		auth.POST("/post", controllers.CreatePost)
-		auth.GET("/posts", controllers.GetPosts)
-		auth.POST("/comment", controllers.CreateComment)
+		userRoutes.POST("/register", userController.Register)
+		userRoutes.POST("/login", userController.Login)
+		userRoutes.DELETE("/:email", userController.DeleteUser)
 	}
+}
+
+func SetupRouter(router *gin.Engine) {
+	// Enable Swagger
+	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	// Enable CORS
-	r.Use(cors.New(cors.Config{
+	router.Use(cors.New(cors.Config{
 		AllowOrigins:     []string{"*"}, // Allow all domains (Change this to restrict access)
 		AllowMethods:     []string{"GET", "POST", "PUT", "DELETE", "OPTIONS"},
 		AllowHeaders:     []string{"Origin", "Content-Type", "Authorization"},
@@ -41,6 +35,4 @@ func SetupRouter() *gin.Engine {
 		AllowCredentials: true,
 		MaxAge:           12 * time.Hour,
 	}))
-
-	return r
 }
